apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: metadata
              mountPath: /metadata
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobooks-pvc
        - name: podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
spec:
  selector:
    app: audiobookshelf
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
